--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 body {
+    background-color:slateblue;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .container {
